fix for mobile: company page content is not visible:

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -88,7 +88,7 @@ $content-appear-duration: 1s;
   }
 
   .about-image-container {
-    animation: 0;
+    animation: none;
     opacity: 1;
     padding-bottom: 40px;
   }
