--- a/src/pages/company-page/company-page.scss
+++ b/src/pages/company-page/company-page.scss
@@ -11,16 +11,12 @@
 }
 
 .company-page {
+  // todo: animation laaaags on mobile devices (e.g. iPhone)
   animation: 2s ease-out 0s 1 slide-in-from-right;
   display: flex;
   height: 100%;
   overflow-x: scroll;
   overflow-y: hidden;
-
-  &.mobile {
-    animation: 2s ease-out 0s 1 fade-in forwards;
-    opacity: 0;
-  }
 
   >* {
     flex: 0 0 auto;
@@ -172,6 +168,17 @@
 }
 
 // ####### END product page ######
+
+.company-page.mobile {
+  animation: 2s ease-out 0s 1 fade-in forwards;
+  opacity: 0;
+
+  .page-title,
+  .gap,
+  > .company-header {
+    display: none;
+  }
+}
 
 @media screen and (max-width: $laptop-width) {
   .company-image {
